--- a/Pentaho-Docker/assemblies/pentaho-server/Dockerfile
+++ b/Pentaho-Docker/assemblies/pentaho-server/Dockerfile
@@ -21,7 +21,7 @@ ARG PENTAHO_SERVER_PATH
 ARG INSTALLER_PATH=/opt/pentaho-installer
 ## Arguments for regular Pentaho Server install
 ARG PENTAHO_INSTALLER_NAME=pentaho-server-ee
-ARG PENTAHO_VERSION=11.0.0.0-237
+ARG PENTAHO_VERSION=11.0.0.0-xxx
 ARG IS_DEMO=0
 
 ARG FILE_SOFTWARE=${PENTAHO_INSTALLER_NAME}-${PENTAHO_VERSION}.zip
