--- a/Pentaho-Docker/assemblies/pentaho-server/Dockerfile
+++ b/Pentaho-Docker/assemblies/pentaho-server/Dockerfile
@@ -4,8 +4,8 @@ ARG INSTALLATION_PATH=/opt/pentaho
 ARG PENTAHO_VERSION
 ARG PENTAHO_SERVER_PATH=${INSTALLATION_PATH}/pentaho-server
 
-ARG UNPACK_BUILD_IMAGE=debian:trixie-slim
-ARG PACK_BUILD_IMAGE=debian:trixie-slim
+ARG UNPACK_BUILD_IMAGE=one.hitachivantara.com/docker/debian:trixie-slim
+ARG PACK_BUILD_IMAGE=one.hitachivantara.com/docker/debian:trixie-slim
 
 FROM ${UNPACK_BUILD_IMAGE} AS install_unpack
 
@@ -21,7 +21,7 @@ ARG PENTAHO_SERVER_PATH
 ARG INSTALLER_PATH=/opt/pentaho-installer
 ## Arguments for regular Pentaho Server install
 ARG PENTAHO_INSTALLER_NAME=pentaho-server-ee
-ARG PENTAHO_VERSION=11.0.0.0-237
+ARG PENTAHO_VERSION=11.0.0.0-xxx
 ARG IS_DEMO=0
 
 ARG FILE_SOFTWARE=${PENTAHO_INSTALLER_NAME}-${PENTAHO_VERSION}.zip
@@ -132,11 +132,6 @@ COPY --from=install_unpack --chown=${PENTAHO_USER}:${PENTAHO_USER} ${INSTALLATIO
 #COPY --chown=${PENTAHO_USER}:${PENTAHO_USER} ./entrypoint/ /
 #Copy the entrypoint script to the root folder
 COPY ./entrypoint/ /
-RUN chmod +x /docker-entrypoint.sh
-
-# Set permissions for logs and config directories to allow mounted volumes
-RUN chmod -R 777 ${PENTAHO_SERVER_PATH}/tomcat/logs && \
-    chmod -R 777 ${PENTAHO_HOME}
 
 #Use pentaho-server installation dir as WORKDIR
 WORKDIR ${PENTAHO_SERVER_PATH}
@@ -152,4 +147,4 @@ USER ${PENTAHO_USER}
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
-CMD ["./tomcat/bin/catalina.sh", "run"]
+CMD ["./start-pentaho.sh"]
