--- a/Pentaho-Containers/On-Prem/Pentaho-Server-PostgreSQL/docker-compose.yml
+++ b/Pentaho-Containers/On-Prem/Pentaho-Server-PostgreSQL/docker-compose.yml
@@ -1,12 +1,75 @@
 services:
+  # HashiCorp Vault for Secrets Management
+  vault:
+    image: hashicorp/vault:1.15
+    container_name: pentaho-vault
+    hostname: vault
+    restart: unless-stopped
+    cap_add:
+      - IPC_LOCK
+    environment:
+      VAULT_ADDR: http://0.0.0.0:8200
+      VAULT_API_ADDR: http://0.0.0.0:8200
+    ports:
+      - "${VAULT_PORT:-8200}:8200"
+    volumes:
+      - vault_data:/vault/data
+      - ./vault/config:/vault/config:ro
+    entrypoint: /bin/sh
+    command: >
+      -c "chown -R vault:vault /vault/data &&
+          exec docker-entrypoint.sh vault server -config=/vault/config/vault.hcl"
+    networks:
+      - pentaho-net
+    healthcheck:
+      test: ["CMD", "sh", "-c", "wget -q --spider http://127.0.0.1:8200/v1/sys/health?standbyok=true&sealedok=true&uninitok=true || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "3"
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+
+  # Vault Initialization (runs once)
+  vault-init:
+    image: hashicorp/vault:1.15
+    container_name: pentaho-vault-init
+    user: root
+    depends_on:
+      vault:
+        condition: service_healthy
+    environment:
+      VAULT_ADDR: http://vault:8200
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      PENTAHO_DB_PASSWORD: ${PENTAHO_DB_PASSWORD:-pentaho}
+    volumes:
+      - vault_data:/vault/data
+      - ./scripts:/scripts:ro
+    entrypoint: ["/bin/sh", "-c"]
+    command: ["apk add --no-cache curl jq bash && /scripts/vault-init.sh"]
+    networks:
+      - pentaho-net
+    restart: "no"
+
   # PostgreSQL Database with Pentaho Repository
   postgres:
     image: postgres:15
     container_name: pentaho-postgres
     hostname: repository
     restart: unless-stopped
+    read_only: true
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
       TZ: America/New_York
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
@@ -15,7 +78,12 @@ services:
       - ./db_init_postgres:/docker-entrypoint-initdb.d:ro
       - ./postgres-config/custom.conf:/etc/postgresql/conf.d/custom.conf:ro
       - ./postgres-config/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+    tmpfs:
+      - /tmp:size=256M,mode=1777
+      - /var/run/postgresql:size=64M,mode=755
     command: postgres -c hba_file=/etc/postgresql/pg_hba.conf
+    secrets:
+      - postgres_password
     networks:
       - pentaho-net
     healthcheck:
@@ -24,6 +92,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    stop_grace_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "5"
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+          cpus: '2'
+        reservations:
+          memory: 512M
 
   # Pentaho Server
   pentaho-server:
@@ -40,12 +121,16 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      vault-init:
+        condition: service_completed_successfully
     environment:
       - PENTAHO_MIN_MEMORY=${PENTAHO_MIN_MEMORY:-2048m}
       - PENTAHO_MAX_MEMORY=${PENTAHO_MAX_MEMORY:-4096m}
       - LICENSE_URL=${LICENSE_URL:-}
       - PENTAHO_SERVER_PATH=${PENTAHO_SERVER_PATH:-/opt/pentaho/pentaho-server}
       - INSTALLATION_PATH=${INSTALLATION_PATH:-/opt/pentaho}
+      - VAULT_ADDR=http://vault:8200
+      - DB_TYPE=postgres
     ports:
       - "${PENTAHO_HTTP_PORT:-8090}:8080"
       - "${PENTAHO_HTTPS_PORT:-8443}:8443"
@@ -55,19 +140,38 @@ services:
       # User configuration directories
       - ./config/.kettle:/home/pentaho/.kettle
       - ./config/.pentaho:/home/pentaho/.pentaho
-      # Log directory - commented out to avoid permission issues, use docker logs instead
-      # - ./logs:/opt/pentaho/pentaho-server/tomcat/logs
       # Named volumes for data persistence
       - pentaho_solutions:/opt/pentaho/pentaho-server/pentaho-solutions
       - pentaho_data:/opt/pentaho/pentaho-server/data
+      # Vault credentials (read-only)
+      - vault_data:/vault/data:ro
+      # Scripts for fetching secrets
+      - ./scripts:/scripts:ro
+    tmpfs:
+      - /tmp:size=512M,mode=1777
+      - /opt/pentaho/pentaho-server/tomcat/temp:size=256M,mode=1777
+      - /opt/pentaho/pentaho-server/tomcat/work:size=256M,mode=1777
     networks:
       - pentaho-net
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/pentaho/Login"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 120s
+      retries: 5
+      start_period: 180s
+    stop_grace_period: 60s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "200m"
+        max-file: "5"
+    deploy:
+      resources:
+        limits:
+          memory: ${PENTAHO_MAX_MEMORY_LIMIT:-6G}
+          cpus: '4'
+        reservations:
+          memory: ${PENTAHO_MIN_MEMORY:-2048m}
 
 networks:
   pentaho-net:
@@ -77,9 +181,15 @@ networks:
         - subnet: 172.28.0.0/16
 
 volumes:
+  vault_data:
+    driver: local
   pentaho_postgres_data:
     driver: local
   pentaho_solutions:
     driver: local
   pentaho_data:
     driver: local
+
+secrets:
+  postgres_password:
+    file: ./secrets/postgres_password.txt
