--- a/Pentaho-Containers/On-Prem/Pentaho-Server-MSSQL/softwareOverride/2_repository/pentaho-solutions/system/scheduler-plugin/quartz/quartz.properties
+++ b/Pentaho-Containers/On-Prem/Pentaho-Server-MSSQL/softwareOverride/2_repository/pentaho-solutions/system/scheduler-plugin/quartz/quartz.properties
@@ -297,7 +297,8 @@ org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 #_replace_jobstore_properties
 
 org.quartz.jobStore.misfireThreshold = 60000
-org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+# MSSQL-specific delegate class
+org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.MSSQLDelegate
 org.quartz.jobStore.useProperties = false
 org.quartz.jobStore.dataSource = myDS
 org.quartz.jobStore.tablePrefix = QRTZ6_
